# GL-SMARTCITY

./: .gitignore  .gitmodules  README.md
.github/workflows/: ccpp.yml
sbc-platform/: .gitignore  CMakeLists.txt  README.MD  build.sh  car_path_simulation.nmea  run_airc.sh  stop_airc.sh
sbc-platform/docs/: AirC schema.odt  AirCReq.reqw  Cloud_Guide_AirC_OUTDATED_NOT_WORKS_ANY_MORE.odt  SBC schema.odt  cloud functions.odt  readme.md
sbc-platform/lib/: .gitignore  libraries.md
sbc-platform/lib/TestInput/: CMakeLists.txt  InputTTY.cpp
sbc-platform/lib/glog/: CMakeLists.txt
sbc-platform/lib/gtest/: CMakeLists.txt
sbc-platform/lib/libjsonparse/: CMakeLists.txt
sbc-platform/lib/paho.mqtt.c/: CMakeLists.txt
sbc-platform/lib/paho.mqtt.c/libjwt/: CMakeLists.txt
sbc-platform/lib/paho.mqtt.c/libjwt/libjwt/: CMakeLists.txt
sbc-platform/lib/restclient-cpp/: CMakeLists.txt
sbc-platform/src/: CMakeLists.txt
sbc-platform/src/CloudHub/: .gitignore  CMakeLists.txt  README.txt  build.sh  cloud_hub.pro  clusterDataGroup.cpp  clusterDataGroup.h  clusterDataItem.cpp  clusterDataItem.h  clusterDataProcessor.cpp  clusterDataProcessor.h  clusterRawPkt.cpp  clusterRawPkt.h  firebase-initial-setup.json  hubConfigManager.cpp  hubConfigManager.h  hubConfigManagerWrapper.cpp  hubConfigManagerWrapper.h  main.cpp  mqttMsgInstance.cpp  mqttMsgInstance.cpp.orig  mqttMsgInstance.h  mqttMsgManager.cpp  mqttMsgManager.h  mqttMsgParamsItem.cpp  mqttMsgParamsItem.h  run.sh  sbc_mqtt_ciotc.c  sbc_mqtt_ciotc.c.orig  sbc_mqtt_ciotc.h  udpServer.cpp  udpServer.h
sbc-platform/src/CloudHub/certs/: rsa_private.pem  rsa_public.pem
sbc-platform/src/CloudHub/conf/: config.json
sbc-platform/src/IC-Lib/: CMakeLists.txt  LICENSE  README.md  build.sh
sbc-platform/src/IC-Lib/DEBIAN/: control
sbc-platform/src/IC-Lib/conf/: config.json  config_id2.json  config_id3.json
sbc-platform/src/IC-Lib/libcluster/: MsgReceiver.cpp  MsgReceiver.hpp  ParkingController.cpp  ParkingController.hpp  TcpMsgSender.cpp  TcpMsgSender.hpp  UdpMsgSender.cpp  UdpMsgSender.hpp  cluster.cpp  cluster.h  glogwrapper.cpp  glogwrapper.h  logger.c  logger.h
sbc-platform/src/IC-Lib/src/: main.cpp
sbc-platform/src/gcp/smartcity/: .firebaserc  Makefile  README.md  firebase.json  gulpfile.js  index.html  package-lock.json  package.json
sbc-platform/src/gcp/smartcity-func/: README.md  function-cars.go  function-tl-controller.go  function-tl-map-android.go  function-tl-map-embedded.go
sbc-platform/src/gcp/smartcity/.firebase/: hosting.cHVibGlzaA.cache
sbc-platform/src/gcp/smartcity/css/: main.css
sbc-platform/src/gcp/smartcity/functions/: package-lock.json
sbc-platform/src/gcp/smartcity/js/: index.js
sbc-platform/src/gcp/smartcity/less/: main.less
sbc-platform/src/pits/xlgyro_fake/: CMakeLists.txt  README.MD  main.c
sbc-platform/tools/: copy_lib_dependencies.sh
