set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

cmake_minimum_required(VERSION 3.16)

PROJECT(cloud_hub)

FILE(GLOB CPPSRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB CSRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
FILE(GLOB HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

SET(OBDLOGGER_LIBS ssl crypto paho-mqtt3cs jwt jansson)

find_package(Qt5 COMPONENTS DBus Gui Core Widgets REQUIRED)

ADD_EXECUTABLE(cloud_hub ${CSRCS} ${CPPSRCS} ${HEADERS})

TARGET_LINK_LIBRARIES(cloud_hub ${OBDLOGGER_LIBS} Qt5::Gui Qt5::DBus Qt5::Widgets Qt5::Core pthread)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/conf ${CMAKE_CURRENT_SOURCE_DIR}/certs DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
